--- a/test-app/src/index.css
+++ b/test-app/src/index.css
@@ -1,1 +1,4 @@
-@import url('./style/ProfileCard.css');
+/* @import url('./style/ProfileCard.css');
+@import url('./style/Header.css');
+@import url('./style/Footer.css'); */
+@import url('./style/BookCard.css');
