--- a/test-app/src/index.css
+++ b/test-app/src/index.css
@@ -1,4 +1,5 @@
-/* @import url('./style/ProfileCard.css');
+@import url('./style/Author.css');
 @import url('./style/Header.css');
-@import url('./style/Footer.css'); */
-@import url('./style/BookCard.css');
+@import url('./style/Footer.css');
+@import url('./style/Nav.css');
+@import url('./style/BlogPost.css');
