--- a/test-app/src/style/Header.css
+++ b/test-app/src/style/Header.css
@@ -1,3 +1,24 @@
-header{
-    background-color: aqua;
+body{
+    margin: 0;
+    padding: 0;
+}
+.header{
+    background: linear-gradient(135deg, #d91ffad8, #001e53);
+    color: white;
+    padding: 60px 20px;
+    text-align: center;
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    animation: fadeIn 2.5s ease-in-out;
+}
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+header h1 {
+    font-family: Arial, Helvetica, sans-serif;
+}
+header p {
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: italic;
 }
